...
          key: _formKey,
          child: Column(
            mainAxisSize: MainAxisSize.min,
            crossAxisAlignment: CrossAxisAlignment.start,
            children: [
              Text(
                'Add New Knowledge Source',
                style: Theme.of(context).textTheme.headlineMedium,
              ),
              const SizedBox(height: 10),

              // Toggle
              if (allCourses.hasValue && allCourses.value!.isNotEmpty)
...
              ),
              const SizedBox(height: 20),
              addCourseState.when(
                data: (_) => SizedBox(
                  width: double.infinity,
                  child: NeoButton(
                    text: _addToExisting ? 'Add Resource' : 'Create Course',
                    onPressed: _submit,
                    icon: _addToExisting ? Icons.add_link : Icons.library_add,
                  ),
                ),
                loading: () => const SizedBox(
                  height: 100,
...
